--- a/src/app/global.css
+++ b/src/app/global.css
@@ -250,3 +250,49 @@ table {
 [data-rehype-pretty-code-title] + pre {
   @apply mt-0 rounded-t-none border-t-0;
 }
+
+code {
+  counter-reset: line;
+}
+
+code > [data-line]::before {
+  counter-increment: line;
+  content: counter(line);
+  display: inline-block;
+  width: 1rem;
+  margin-right: 1rem;
+  text-align: right;
+  color: gray;
+}
+
+code[data-line-numbers-max-digits="2"] > [data-line]::before {
+  width: 2rem;
+}
+
+code[data-line-numbers-max-digits="3"] > [data-line]::before {
+  width: 3rem;
+}
+
+[data-highlighted-line] {
+  background-color: rgba(200, 200, 255, 0.1);
+}
+
+.language-sql,
+.language-typescript,
+.language-javascript {
+  color: black !important;
+}
+
+.dark .language-sql,
+.dark .language-typescript,
+.dark .language-javascript {
+  color: white !important;
+}
+
+.dark code {
+    color: white !important;
+}
+
+code {
+    color: black !important;
+}
